crates/viewer/dl_blueprint_tree/tests/snapshots/view_structure_test/query-to_the/unknown_origin.snap
---
source: crates/viewer/dl_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container: ~
